--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
   },
   "dependencies": {
     "@loopback/logging": "^0.11.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "prettier": "^3.0.3"
   }
 }
