--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: '18'
 
       - name: Install Packages
         run: |
@@ -27,4 +27,4 @@ jobs:
         uses: JS-DevTools/npm-publish@v2
         with:
           token: ${{secrets.NPM_TOKEN}}
-          commit-pattern: "^release.*"
+          commit-pattern: '^release.*'
